<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">Media</string>
    <string name="unknow_album">Unknown Album</string>
    <string name="unknow_artist">Unknown Artist</string>
    <string name="unknow">unknow</string>
    <string name="durationformatshort">%2$d:%5$02d</string>
    <string name="durationformatlong">%1$d:%3$02d:%5$02d</string>
    <string name="durationformatlonglong">%1$02d:%3$02d:%5$02d</string>
    <string name="error_music">The current song can not be played!</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="unknown_title">unknown title</string>
    <string name="unknown_album">unknown album</string>
    <string name="unknown_artist">unknown artist</string>
    <string name="btn_usb">USB</string>
    <string name="btn_radio">Radio</string>
    <string name="bt_disconnect">Bluetooth has disconnected</string>
    <string name="mode_folder_loop">Folder Repeat</string>
    <string name="mode_folder_random">Folder Random</string>
    <string name="mode_single_loop">REPEAT</string>
    <string name="mode_all_loop">Full cycle</string>
    <string name="bottom_source">Source</string>
    <string name="bottom_function">Func</string>
    <string name="bottom_eq">EQ</string>
    <string name="resume_playing_title">Continue to play video</string>
    <string name="resume_playing_message">from %s Play resumes？</string>
    <string name="resume_playing_resume">Resume</string>
    <string name="resume_playing_restart">Restart</string>
    <string name="VideoView_error_text_unknown">You can not play the secondary video</string>
    <string name="VideoView_error_text_invalid_progressive_playback">Sorry, this video is not suitable for playback on this device.</string>
    <string name="VideoView_error_button">确定</string>
    <string name="usb_name">udisk</string>
    <string name="sd_name">sdcard</string>
    <string name="bt_disconnected">Bluetooth is not connected</string>
    <string name="no_media">No media file</string>
    <string name="brightness">brightness</string>
    <string name="usb_error">Udisk is not available！</string>
    <string name="sd_error">SD communication fails, reinsert</string>
    <string name="bt_is_disconnect">Bluetooth is not connected</string>
    <string name="navigation_button_title_usb">USB</string>
    <string name="navigation_button_title_bluetooth">BTMusic</string>
    <string name="navigation_button_title_radio">Radio</string>
    <string name="music_player_label">Music Player</string>
    <string name="default_track_name">ai ping cai hui ying</string>
    <string name="artist_name_label">"Artist: "</string>
    <string name="default_artist_name">zhuoyiting</string>
    <string name="album_name_label">"Album: "</string>
    <string name="default_album_name">ai ping cai hui ying</string>
    <string name="default_track_position">3:30</string>
    <string name="default_track_duration">4:55</string>
    <string name="last_track">last</string>
    <string name="play_pause">play/pause</string>
    <string name="pause">Pause</string>
    <string name="play">Play</string>
    <string name="next_track">next</string>
    <string name="tab_subtitle_single">Single</string>
    <string name="tab_subtitle_artist">Artist</string>
    <string name="tab_subtitle_album">Album</string>
    <string name="tab_subtitle_folder">Folder</string>
    <string name="tab_subtitle_play_list">Play List</string>
    <string name="tab_subtitle_show_list">Show List</string>
    <string name="tab_subtitle_list">List</string>
    <string name="tab_subtitle_photo_album">Photo album</string>
    <string name="fake_stuff">Fake stuff</string>
    <string name="usb_media_type_title_music">Music</string>
    <string name="usb_media_type_title_video">Video</string>
    <string name="usb_media_type_title_picture">Image</string>
    <string name="usb_media_load_info_loading_formatter">Loading %s list…</string>
    <string name="usb_media_load_info_complete_empty_formatter">Can not find any %s file.</string>
    <string name="usb_media_name_music">Music</string>
    <string name="usb_media_name_video">video</string>
    <string name="usb_media_name_picture">image</string>
    <string name="usb_media_type_title_net_music">Online Music</string>
    <string name="usb_media_type_title_net_radio">Online Radio</string>
    <string name="revert">Revert</string>
    <string name="rotate_90">rotate</string>
    <string name="music_appwidget_title">Multimedia</string>
    <string name="unkown_artist">Unknown artist</string>
    <string name="music_appwidget_subtitle">Click launch application</string>
    <string name="bt_music_player">Bt Music Player</string>
    <string name="media_title_usb_music">USB Music</string>
    <string name="media_title_usb">USB</string>
    <string name="media_title_bt_music">BTMusic</string>
    <string name="media_title_radio">Radio</string>
    <string name="media_title_usb_image">Image</string>
    <string name="media_title_usb_video">Video</string>
    <string name="media_title_net_music">Online Music</string>
    <string name="media_title_net_radio">Online Radio</string>
    <string name="media_usb_tab_sub_folder_label_formatter" formatted="false">%s ( %s )</string>
    <string name="tex_sample">Text Sample</string>
    <string name="music_play_next_audio_formatter">Next song: %s</string>
    <string name="music_play_list_folder_file_number_formatter">%s songs</string>
    <string name="video_play_error">Video cannot play!</string>
    <string name="dialog_default_title">Dialog title</string>
    <string name="dialog_title_usb_and_bluetooth_not_exist">No any audio media found, please connect bluetooth or insert USB</string>
    <string name="dialog_title_usb_not_exist">No USB storage media find, please mount USB storage media</string>
    <string name="dialog_title_bluetooth_not_connection">No Bluetooth connection find, please connect bluetooth</string>
    <string name="dialog_yes">Yes</string>
    <string name="dialog_ok">OK</string>
    <string name="dialog_no">No</string>
    <string name="loading_text">Loading…</string>
    <string name="loading_text_formatter">Loading %s</string>
    <string name="no_bt_connection_error">No Bluetooth connection available</string>
    <string name="no_usb_mounted_error">No media storage mounted available</string>
    <string name="toast_usb_disconnected">USB disconnected</string>
    <string name="toast_bluetooth_disconnected">Bluetooth disconnected</string>
    <string name="toast_usb_insert_to_carlife_interface_error">This USB port only for phone connection!</string>
    <string name="toast_no_music_item_find">No music item found</string>
    <string name="toast_video_file_not_found">Last video file not found</string>
    <string name="toast_music_play_error">Music cannot play: %s</string>
    <string name="dialog_title_music_not_found">No music file found</string>
    <string name="warnning">Kindly Reminder</string>
    <string name="media_free_device">Media free device</string>
</resources>
