<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout android:background="#e0000000" android:layout_width="fill_parent" android:layout_height="fill_parent"
  xmlns:android="http://schemas.android.com/apk/res/android">
    <RelativeLayout android:background="@drawable/dialog_bg" android:layout_width="500.0dip" android:layout_height="300.0dip" android:layout_centerInParent="true">
        <TextView android:textSize="33.0sp" android:textColor="#ffffffff" android:gravity="center" android:id="@id/title" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginTop="40.0dip" android:text="@string/dialog_title_bluetooth_not_connection" android:layout_marginStart="52.0dip" android:layout_marginEnd="52.0dip" />
        <Button android:textSize="33.0sp" android:textColor="@android:color/white" android:id="@id/yes" android:background="@drawable/dialog_button_background" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginBottom="30.0dip" android:text="@string/dialog_yes" android:layout_alignParentBottom="true" android:layout_marginStart="81.0dip" />
        <Button android:textSize="33.0sp" android:textColor="@android:color/white" android:id="@id/no" android:background="@drawable/dialog_button_background" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginBottom="30.0dip" android:text="@string/dialog_no" android:layout_alignTop="@id/yes" android:layout_marginEnd="81.0dip" android:layout_alignParentEnd="true" />
    </RelativeLayout>
</RelativeLayout>