<?xml version="1.0" encoding="utf-8"?>
<RadioGroup android:orientation="horizontal" android:id="@id/media_menu_group" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginTop="20.0dip" android:layout_marginRight="12.0dip"
  xmlns:android="http://schemas.android.com/apk/res/android">
    <View android:background="@drawable/media_menu_divider_vertical" android:layout_width="1.0dip" android:layout_height="47.0dip" />
    <RadioButton android:textSize="33.0sp" android:textColor="@android:color/white" android:gravity="center_horizontal" android:id="@id/radio" android:background="@drawable/media_menu_selector" android:paddingTop="8.0dip" android:layout_width="0.0dip" android:layout_height="73.0dip" android:button="@null" android:text="@string/navigation_button_title_radio" android:layout_weight="1.0" />
    <View android:background="@drawable/media_menu_divider_vertical" android:layout_width="1.0dip" android:layout_height="47.0dip" />
    <RadioButton android:textSize="33.0sp" android:textColor="@android:color/white" android:gravity="center_horizontal" android:id="@id/music" android:background="@drawable/media_menu_selector" android:paddingTop="8.0dip" android:layout_width="0.0dip" android:layout_height="73.0dip" android:button="@null" android:text="@string/usb_media_type_title_music" android:layout_weight="1.0" />
    <View android:background="@drawable/media_menu_divider_vertical" android:layout_width="1.0dip" android:layout_height="47.0dip" />
    <RadioButton android:textSize="33.0sp" android:textColor="@android:color/white" android:gravity="center_horizontal" android:id="@id/video" android:background="@drawable/media_menu_selector" android:paddingTop="8.0dip" android:layout_width="0.0dip" android:layout_height="73.0dip" android:button="@null" android:text="@string/usb_media_type_title_video" android:layout_weight="1.0" />
    <View android:background="@drawable/media_menu_divider_vertical" android:layout_width="1.0dip" android:layout_height="47.0dip" />
    <RadioButton android:textSize="33.0sp" android:textColor="@android:color/white" android:gravity="center_horizontal" android:id="@id/bt_music" android:background="@drawable/media_menu_selector" android:paddingTop="8.0dip" android:layout_width="0.0dip" android:layout_height="73.0dip" android:button="@null" android:text="@string/navigation_button_title_bluetooth" android:layout_weight="1.0" />
    <View android:background="@drawable/media_menu_divider_vertical" android:layout_width="1.0dip" android:layout_height="47.0dip" />
</RadioGroup>